Enable dynamic agent loading